--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
     .game:nth-child(1) { animation-delay: 0.8s; }
     .game:nth-child(2) { animation-delay: 1s; }
     .game:nth-child(3) { animation-delay: 1.2s; }
+    .game:nth-child(4) { animation-delay: 2s; }
     /* Add more nth-child rules if you have more games */
 
     @keyframes gamePopIn {
@@ -457,6 +458,10 @@
     <div class="game">
       <img draggable="false" src="https://florr.io/apple-touch-icon.png" alt="3D Florr" />
       <a href="http://18.144.119.82:3000" target="_blank" onclick="playSound()">3D Florr.io (Web)</a>
+    </div>
+    <div class="game">
+      <img draggable="false" src="https://florr.io/apple-touch-icon.png" alt="Florr Clone" />
+      <a href="http://3dflorr.cryodome.com:3000" target="_blank" onclick="playSound()">Florr Clone</a>
     </div>
   </div>
 </div>
@@ -975,3 +980,4 @@
 </script>
 </body>
 </html>
+
