--- a/index.html
+++ b/index.html
@@ -460,8 +460,8 @@
       <a href="http://18.144.119.82:3000" target="_blank" onclick="playSound()">3D Florr.io (Web)</a>
     </div>
     <div class="game">
-      <img draggable="false" src="https://florr.io/apple-touch-icon.png" alt="Florr Clone" />
-      <a href="http://3dflorr.cryodome.com:3000" target="_blank" onclick="playSound()">Florr Clone</a>
+      <img draggable="false" src="https://florrclone.cryodome.com:3000/favicon.ico" alt="Florr Clone" />
+      <a href="https://florrclone.cryodome.com:3000/" target="_blank" onclick="playSound()">Florr Clone</a>
     </div>
   </div>
 </div>
@@ -980,4 +980,5 @@
 </script>
 </body>
 </html>
+
 
